--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/NavigationViewMain"
-        android:layout_width="match_parent"
+        android:layout_width="165dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         app:menu="@menu/drawer_menu" />
