--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -7,4 +7,13 @@
     <item
         android:id="@+id/overviewFragmentsWrapper"
         android:title="@string/menu_overview" />
+    <item
+        android:id="@+id/searchFragmentsWrapper"
+        android:title="@string/menu_search" />
+    <item
+        android:id="@+id/buySellFragmentsWrapper"
+        android:title="@string/menu_buy_sell" />
+    <item
+        android:id="@+id/settingsFragmentsWrapper"
+        android:title="@string/menu_settings" />
 </menu>
