--- a/app/src/main/res/layout/fragment_overview_fragments_wrapper.xml
+++ b/app/src/main/res/layout/fragment_overview_fragments_wrapper.xml
@@ -2,13 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frameLayout3"
+    android:id="@+id/OverviewWrapperLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragments.Wrappers.OverviewFragmentsWrapper">
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragmentContainerView7"
+        android:id="@+id/OverviewRecyclerViewContainer"
         android:name="no.stockwallet.Fragments.OverviewFragments.StockListFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -17,5 +17,6 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout="@layout/fragment_stock_list" />
 </androidx.constraintlayout.widget.ConstraintLayout>
