--- a/app/src/main/res/layout/fragment_settings_fragments_wrapper.xml
+++ b/app/src/main/res/layout/fragment_settings_fragments_wrapper.xml
@@ -16,4 +16,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/settings_fragment"
+        android:name="no.stockwallet.Fragments.SettingsFragments.SettingFragment"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@id/fragmentContainerView8"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/fragmentContainerView8"
+        app:layout_constraintTop_toTopOf="@+id/fragmentContainerView8" />
 </androidx.constraintlayout.widget.ConstraintLayout>
