--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,6 +54,7 @@
             android:layout_height="wrap_content"
             android:text="TextView"
             android:textSize="18dp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="@+id/toolbar3"
             app:layout_constraintEnd_toEndOf="@+id/toolbar3"
             app:layout_constraintStart_toStartOf="parent"
