minor fixed on layout for home page

--- a/app/src/main/res/values/HomeFragmentStrings.xml
+++ b/app/src/main/res/values/HomeFragmentStrings.xml
@@ -4,5 +4,5 @@
     <string name="aksje_navn_ph">Askje navn PH</string>
     <string name="aksje_kost_ph">Aksje kost PH</string>
     <string name="Aksje_pcentPH">aksje_prosent</string>
-    <string name="home_total_title">Totalt investert:</string>
+    <string name="home_total_title">Total Markedsverdi:</string>
 </resources>
