--- a/app/src/main/res/layout/fragment_total.xml
+++ b/app/src/main/res/layout/fragment_total.xml
@@ -26,7 +26,7 @@
         android:layout_height="38dp"
         android:text="@string/home_total_title"
         android:textAlignment="center"
-        android:textSize="25dp"
+        android:textSize="22sp"
         app:layout_constraintBottom_toTopOf="@+id/guideline8"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.516"
@@ -52,7 +52,7 @@
         android:layout_height="35dp"
         android:text="Prosent avkas periode"
         android:textAlignment="center"
-        android:textSize="20dp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
